# xrk-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  xrk.pyi
.github/workflows/: ci.yml  release-python.yml
examples/: analyze.rs
src/: config.rs  dataframe.rs  error.rs  lib.rs  parser.rs  python.rs  types.rs
tests/: integration.rs
