[package]
name = "xrk"
version = "0.1.0"
edition = "2021"
description = "AiM XRK telemetry file parser — cross-platform, zero runtime dependencies, optional Polars DataFrames and Python bindings"
license = "MIT"
repository = "https://github.com/garysclaw/xrk-rs"
keywords = ["motorsport", "telemetry", "aim", "xrk", "racing"]
categories = ["parser-implementations", "science"]

[lib]
name = "xrk"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1"

# Config serialization (LoggerConfig → JSON)
serde      = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Polars DataFrame output
polars = { version = "0.46", features = ["lazy", "csv", "parquet"], optional = true }

# Python bindings via PyO3/maturin
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
serde     = ["dep:serde", "dep:serde_json"]
dataframe = ["dep:polars"]
python    = ["dep:pyo3"]
full      = ["serde", "dataframe", "python"]

[dev-dependencies]
approx = "0.5"

[[example]]
name = "analyze"
path = "examples/analyze.rs"
